2009-04-26 arne

	* Cocoa drawing now draws all dirty rects seperatly instead of the union rect
	* added another method to provide the BundleRef on Mac OS X (search for VSTGUI_NEW_BUNDLE_REF_DEFINITION)
	* removed old unused menu item definitions from vstcontrols.h

2009-03-30 arne

	* fix CFrame::scrollRect and CScrollView scrolling
	* Cocoa implementation for CFrame::scrollRect
	* fix some warnings when building for Mac OS X 10.5 or above

2009-03-08 arne

	* fix nervous tooltips

2009-02-21 arne

	* move methods only useable with VST in CFrame into the ENABLE_VST_EXTENSION_IN_VSTGUI macro
	* can be compiled under Mac OS X 10.4 again

2009-01-02 arne

	* fix a possible memory leak when compiling Cocoa support in
	* removed some duplicated code
	* removed some unused functions in vstgui.cpp (CColor2RGBColor, RGBColor2CColor)
	* fix bugs in UTF8StringHelper
	* Windows implementation calls frame->onMouseExited() now when the mouse leaves the window
	* dropping text on Windows will use unicode text if VSTGUI_USES_UTF8 is enabled
	* CNewFileSelector implementation for Windows Vista, older Windows versions still needs implementation
	* implementation for missing COptionMenu features on Windows (Icons & prefix numbers)

2008-12-07 arne

	* fixes to cocoa tooltip implementation
	* the platform implementation should call frame->onMouseExited() when the mouse leaves the platform view/window
	* added onMouseDown(..) to IMouseObserver
	* fix warnings when building with gcc4.2

2008-12-06 arne

	* cocoa tooltip implementation
	* added onMouseMoved(..) to IMouseObserver
	* small usability improvements to the tooltip implementation
	* added CView::removeAttribute(..)

2008-10-23 arne

	* fix crash in CMenuItem::setTitle and CMenuItem::setKey
	* fix string width calculation with CoreText
	* make mac compile again if the new fileselector is turned off

2008-10-20 arne

	* fix key steeling from host in cocoa code

2008-09-09 yvan

	* fix compilation when LIBPNG is used and win64
