@@ -1227,6 +1227,8 @@ protected:
 
 extern const char* kMsgCheckIfViewContainer;	///< Message to check if View is a CViewContainer
 extern const char* kMsgLooseFocus;				///< Message of a view loosing focus (only CTextEdit and COptionMenu send this yet)
+extern const char* kMsgNewFocusView;			///< Message send to all parents of the new focus view
+extern const char* kMsgOldFocusView;			///< Message send to all parents of the old focus view
 
 //-----------------------------------------------------------------------------
 // CViewContainer Declaration
